2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger/DisassemblyView.cs: Track
	  TextEditorOptions API changes.

2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Track changes in MD's assembly handling.
	  Mono.Cairo is no longer considered to be a "system"
	  assembly.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.mdp: Flush project format changes.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Use the new async
	evaluation feature.

	* MonoDevelop.Debugger/StackTracePad.cs:
	* MonoDevelop.Debugger/ObjectValuePad.cs: Make sure the pad is updated
	only when it is visible.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.mdp: All projects now require fx 3.5.

2008-12-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/DebuggingService.cs: When cleaning up the
	session, dispose it as last step, since it may be slow, and it might
	delay all other cleanup operations.

2008-12-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/DebuggingService.cs: If something goes wrong when
	starting the debugger, cleanup the session.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/Initializer.cs:
	* MonoDevelop.Debugger/DebugCommands.cs:
	* MonoDevelop.Debugger/DebuggingService.cs:
	* MonoDevelop.Debugger/AttachToProcessDialog.cs: Hide debugger commands
	which are not supported by the installed debuggers. 

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.addin.xml: Updated key bindings to match VS.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.addin.xml: Changed default label of debug command
	for projects since to avoid it being confused with the global debug
	command in the key bindings panel.
