@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.1433
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -88,7 +88,6 @@ namespace MonoDevelop.Debugger {
             this.tree = new Gtk.TreeView();
             this.tree.CanFocus = true;
             this.tree.Name = "tree";
-            this.tree.HeadersClickable = true;
             this.GtkScrolledWindow.Add(this.tree);
             this.vbox2.Add(this.GtkScrolledWindow);
             Gtk.Box.BoxChild w6 = ((Gtk.Box.BoxChild)(this.vbox2[this.GtkScrolledWindow]));
