@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.1433
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -118,7 +118,6 @@ namespace MonoDevelop.Debugger {
             this.treeExceptions.CanFocus = true;
             this.treeExceptions.Name = "treeExceptions";
             this.treeExceptions.HeadersVisible = false;
-            this.treeExceptions.HeadersClickable = true;
             this.GtkScrolledWindow.Add(this.treeExceptions);
             this.vbox4.Add(this.GtkScrolledWindow);
             Gtk.Box.BoxChild w7 = ((Gtk.Box.BoxChild)(this.vbox4[this.GtkScrolledWindow]));
@@ -133,7 +132,6 @@ namespace MonoDevelop.Debugger {
             // Container child vbox3.Gtk.Box+BoxChild
             this.label1 = new Gtk.Label();
             this.label1.Name = "label1";
-            this.label1.LabelProp = "";
             this.vbox3.Add(this.label1);
             Gtk.Box.BoxChild w9 = ((Gtk.Box.BoxChild)(this.vbox3[this.label1]));
             w9.Position = 0;
@@ -153,7 +151,6 @@ namespace MonoDevelop.Debugger {
             w11.Add(w12);
             // Container child GtkHBox.Gtk.Container+ContainerChild
             Gtk.Label w14 = new Gtk.Label();
-            w14.LabelProp = "";
             w11.Add(w14);
             w10.Add(w11);
             this.buttonAdd.Add(w10);
@@ -178,7 +175,6 @@ namespace MonoDevelop.Debugger {
             w20.Add(w21);
             // Container child GtkHBox1.Gtk.Container+ContainerChild
             Gtk.Label w23 = new Gtk.Label();
-            w23.LabelProp = "";
             w20.Add(w23);
             w19.Add(w20);
             this.buttonRemove.Add(w19);
@@ -190,7 +186,6 @@ namespace MonoDevelop.Debugger {
             // Container child vbox3.Gtk.Box+BoxChild
             this.label4 = new Gtk.Label();
             this.label4.Name = "label4";
-            this.label4.LabelProp = "";
             this.vbox3.Add(this.label4);
             Gtk.Box.BoxChild w28 = ((Gtk.Box.BoxChild)(this.vbox3[this.label4]));
             w28.Position = 3;
@@ -222,7 +217,6 @@ namespace MonoDevelop.Debugger {
             this.treeSelected.CanFocus = true;
             this.treeSelected.Name = "treeSelected";
             this.treeSelected.HeadersVisible = false;
-            this.treeSelected.HeadersClickable = true;
             this.GtkScrolledWindow1.Add(this.treeSelected);
             this.vbox5.Add(this.GtkScrolledWindow1);
             Gtk.Box.BoxChild w32 = ((Gtk.Box.BoxChild)(this.vbox5[this.GtkScrolledWindow1]));
