@@ -1,3 +1,14 @@
+2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* gtk-gui/generated.cs:
+	* gtk-gui/MonoDevelop.Debugger.ExceptionsDialog.cs:
+	* gtk-gui/MonoDevelop.Debugger.AttachToProcessDialog.cs:
+	* gtk-gui/MonoDevelop.Debugger.ExpressionEvaluatorDialog.cs:
+	  Flush.
+
+	* Makefile.am:
+	* MonoDevelop.Debugger.mdp: Updated Mono.Cairo reference.
+
 2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Debugger/DisassemblyView.cs: Track
